--- a/index.html
+++ b/index.html
@@ -1,39 +1,345 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HotHair — Парикмахерская</title>
   <style>
+    /* Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+<!-- AOS CSS -->
+<link href="https://unpkg.com/aos @2.3.4/dist/aos.css" rel="stylesheet">
+
+<!-- AOS JS -->
+<script src="https://unpkg.com/aos @2.3.4/dist/aos.js" defer></script>
+
+<!-- Инициализация AOS -->
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    AOS.init({
+      duration: 800,
+      once: true
+    });
+  });
+</script>
+
     body {
-      font-family: Arial, sans-serif;
-      background: #f8f8f8;
-      color: #333;
-      text-align: center;
-      padding: 50px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.6;
+      background-color: #121212;
+      color: #f5f5f5;
+      scroll-behavior: smooth;
     }
-    h1 {
-      font-size: 42px;
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    /* Анимация лого */
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    header {
+      background: #1e1e1e;
+      color: white;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      border-bottom: 1px solid #333;
+    }
+
+    .logo {
+      font-size: 24px;
+      font-weight: bold;
       color: #d63384;
+      animation: pulse 2s infinite;
+      transition: color 0.3s ease;
     }
-    p {
-      font-size: 18px;
-      margin-top: 20px;
+
+    .logo:hover {
+      color: #ff66a3;
     }
+
+    .social-buttons {
+      display: flex;
+      gap: 15px;
+    }
+
+    .social-button {
+      background: #2a2a2a;
+      padding: 8px 12px;
+      border-radius: 8px;
+      transition: background 0.3s ease;
+    }
+
+    .social-button:hover {
+      background: #3a3a3a;
+    }
+
+    svg {
+      width: 24px;
+      height: 24px;
+      fill: white;
+    }
+
+    section {
+      padding: 80px 40px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 120px 20px 80px;
+      background: url('https://picsum.photos/id/1074/1920/600 ') center/cover no-repeat;
+      color: white;
+      position: relative;
+    }
+
+    .hero::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.5);
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+      position: relative;
+      z-index: 1;
+    }
+
+    .hero p {
+      font-size: 20px;
+      margin-bottom: 30px;
+      position: relative;
+      z-index: 1;
+    }
+
     .btn {
       display: inline-block;
-      margin-top: 30px;
-      padding: 12px 24px;
-      background-color: #d63384;
+      padding: 14px 28px;
+      background: #d63384;
       color: white;
-      text-decoration: none;
       border-radius: 30px;
       font-weight: bold;
+      transition: background 0.3s ease;
+      position: relative;
+      z-index: 1;
+    }
+
+    .btn:hover {
+      background: #c02774;
+    }
+
+    .services,
+    .portfolio,
+    .contacts {
+      background: #1e1e1e;
+      margin-top: 40px;
+      border-radius: 12px;
+      padding: 40px;
+    }
+
+    .services h2,
+    .portfolio h2,
+    .contacts h2 {
+      text-align: center;
+      margin-bottom: 40px;
+      font-size: 32px;
+    }
+
+    .service-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
+    }
+
+    .service-item {
+      background: #2a2a2a;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+
+    .service-item h3 {
+      margin-bottom: 10px;
+      color: #d63384;
+    }
+
+    .portfolio-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .portfolio-item {
+      background: #2a2a2a;
+      border-radius: 10px;
+      overflow: hidden;
+      transition: transform 0.3s ease;
+    }
+
+    .portfolio-item:hover {
+      transform: translateY(-5px);
+    }
+
+    .portfolio-item img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .portfolio-caption {
+      padding: 15px;
+      text-align: center;
+      font-size: 16px;
+      color: #ccc;
+    }
+
+    form input,
+    form textarea {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 20px;
+      border: 1px solid #444;
+      background: #2a2a2a;
+      color: #f5f5f5;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+
+    form button {
+      width: 100%;
+      padding: 14px;
+      background: #d63384;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    footer {
+      text-align: center;
+      padding: 40px 20px;
+      background: #121212;
+      color: #888;
+      border-top: 1px solid #2a2a2a;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .social-buttons {
+        margin-top: 15px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>HotHair</h1>
-  <p>Твой идеальный образ начинается здесь</p>
-  <a href="#booking" class="btn">Записаться онлайн</a>
+
+  <!-- Header -->
+  <header>
+    <div class="logo">HotHair</div>
+    <div class="social-buttons">
+      <a href="#" class="social-button" title="Telegram">
+        <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5.45 7.45l-2.5 5c-.13.27-.45.27-.58 0l-1.79-4.2-5.89 1.97c-.3.1-.3.5 0 .6l5.43 2.48c.14.07.3.07.44 0L16.6 9.4c.14-.14.14-.4 0-.55z"/></svg>
+      </a>
+      <a href="#" class="social-button" title="WhatsApp">
+        <svg viewBox="0 0 24 24"><path d="M17.48 14.25c-.08-.13-.27-.2-.57-.35-2.52-1.17-4.3-2.1-4.97-3.45-.16-.32-.02-.75.17-.94.2-.2.32-.23.5-.13 1.6.8 3.45 2.07 3.82 3.3.05.16.03.3-.08.45-.1.14-.25.2-.4.2-.68.02-2.37-.87-4.2-2.9-.27-.3-.65-.28-.82-.13-.17.15-.4.7-.5 1.07-.1.37-.02.67.03.77.05.1.2.15.35.07 1.03-.5 2.53-.9 3.77-.6.14.03.3.03.45-.03.27-.1.5-.35.62-.6.13-.27.2-.57.22-.83zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5.45 7.45l-2.5 5c-.13.27-.45.27-.58 0l-1.79-4.2-5.89 1.97c-.3.1-.3.5 0 .6l5.43 2.48c.14.07.3.07.44 0L16.6 9.4c.14-.14.14-.4 0-.55z"/></svg>
+      </a>
+      <a href="#" class="social-button" title="Instagram">
+        <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-10v-2h10v2zm0-4h-10V7h10v2z"/></svg>
+      </a>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Твой идеальный образ начинается здесь</h1>
+    <p>Профессиональные мастера, модные стрижки, стильные укладки и окрашивание.</p>
+    <a href="#contacts" class="btn">Записаться онлайн</a>
+  </section>
+
+  <!-- Services -->
+  <section id="services" class="services">
+    <h2>Наши услуги</h2>
+    <div class="service-list">
+      <div class="service-item">
+        <h3>Стрижка женская</h3>
+        <p>от 1500 ₽</p>
+      </div>
+      <div class="service-item">
+        <h3>Окрашивание</h3>
+        <p>от 3000 ₽</p>
+      </div>
+      <div class="service-item">
+        <h3>Укладка</h3>
+        <p>от 800 ₽</p>
+      </div>
+      <div class="service-item">
+        <h3>Наращивание волос</h3>
+        <p>от 5000 ₽</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Portfolio -->
+  <section id="portfolio" class="portfolio">
+    <h2>Портфолио мастера</h2>
+    <div class="portfolio-grid">
+      <div class="portfolio-item">
+        <img src="https://picsum.photos/id/1015/600/400 " alt="Работа 1">
+        <div class="portfolio-caption">Стрижка + окрашивание</div>
+      </div>
+      <div class="portfolio-item">
+        <img src="https://picsum.photos/id/1016/600/400 " alt="Работа 2">
+        <div class="portfolio-caption">Укладка на вечер</div>
+      </div>
+      <div class="portfolio-item">
+        <img src="https://picsum.photos/id/1018/600/400 " alt="Работа 3">
+        <div class="portfolio-caption">Повседневный образ</div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contacts -->
+  <section id="contacts" class="contacts">
+    <h2>Записаться онлайн</h2>
+    <form action="mailto:admin@hothair.ru" method="post" enctype="text/plain">
+      <input type="text" name="name" placeholder="Ваше имя" required />
+      <input type="tel" name="phone" placeholder="Номер телефона" required />
+      <input type="email" name="email" placeholder="Email" />
+      <textarea name="message" rows="4" placeholder="Комментарий"></textarea>
+      <button type="submit">Отправить заявку</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    &copy; 2025 HotHair. Все права защищены.
+  </footer>
+
 </body>
 </html>
