--- a/before-after.html
+++ b/before-after.html
@@ -241,17 +241,10 @@
                         <li><a href="index.html">Главная</a></li>
                     </ul>
                 </div>
-                <div class="footer-social">
-                    <h3>Мы в соцсетях</h3>
-                    <div class="social-icons">
-                        <a href="#" class="social-icon" aria-label="Instagram">📸</a>
-                        <a href="#" class="social-icon" aria-label="Facebook">👤</a>
-                        <a href="#" class="social-icon" aria-label="TikTok">📱</a>
-                    </div>
-                </div>
+               
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 HotHAIR. Все права защищены. <a href="admin.html">Админ</a></p>
+                <p>&copy; HotHAIR. Все права защищены. </p>
             </div>
         </div>
     </footer>
