--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                 <i class="fab fa-whatsapp"></i>
                 <span>WhatsApp</span>
             </a>
+            <a href="https://instagram.com/hothair_salon" class="social-btn instagram" target="_blank" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+                <span>Instagram</span>
+            </a>
         </div>
     </header>
 
@@ -261,21 +265,14 @@
                         <li><a href="#contact">Контакты</a></li>
                     </ul>
                 </div>
-                <div class="footer-social">
-                    <h3>Мы в соцсетях</h3>
-                    <div class="social-icons">
-                        <a href="#" class="social-icon" aria-label="Instagram">📸</a>
-                        <a href="#" class="social-icon" aria-label="Facebook">👤</a>
-                        <a href="#" class="social-icon" aria-label="TikTok">📱</a>
-                    </div>
-                </div>
+                
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 HotHAIR. Все права защищены. <a href="admin.html">Админ</a></p>
+                <p>&copy; HotHAIR. Все права защищены. </p>
             </div>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
