--- a/admin.html
+++ b/admin.html
@@ -34,17 +34,13 @@
             background-color: var(--dark-bg);
             color: var(--text-color);
             line-height: 1.6;
-            padding: 20px;
+            min-height: 100vh;
         }
 
         .admin-panel {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 30px;
-            background-color: var(--card-bg);
-            border-radius: var(--border-radius);
-            border: var(--card-border);
-            box-shadow: var(--card-shadow);
+            padding: 20px;
         }
 
         .admin-header {
@@ -58,7 +54,7 @@
 
         .admin-header h1 {
             font-family: var(--font-heading);
-            font-size: 2rem;
+            font-size: 1.8rem;
             color: var(--accent-color);
         }
 
@@ -69,109 +65,33 @@
 
         .btn {
             display: inline-block;
-            padding: 8px 15px;
-            background-color: transparent;
-            color: var(--text-color);
-            border: 2px solid var(--accent-color);
+            padding: 8px 16px;
+            background-color: var(--accent-color);
+            color: var(--dark-bg);
+            border: none;
             border-radius: var(--border-radius);
             font-size: 0.9rem;
             font-weight: 500;
-            text-transform: uppercase;
-            text-decoration: none;
-            letter-spacing: 1px;
-            transition: all 0.3s ease;
             cursor: pointer;
+            transition: all 0.3s ease;
+            text-decoration: none;
         }
 
         .btn:hover {
-            background-color: var(--accent-color);
-            color: var(--dark-bg);
+            opacity: 0.9;
+            transform: translateY(-2px);
         }
 
         .btn.secondary {
-            border-color: var(--secondary-color);
-        }
-
-        .btn.secondary:hover {
             background-color: var(--secondary-color);
         }
 
         .btn.danger {
-            border-color: #e74c3c;
+            background-color: #ff4d4d;
         }
 
-        .btn.danger:hover {
-            background-color: #e74c3c;
-        }
-
-        .appointments-container {
-            margin-bottom: 30px;
-        }
-
-        .appointment-card {
-            background-color: rgba(30, 30, 30, 0.7);
-            border-radius: var(--border-radius);
-            padding: 20px;
-            margin-bottom: 15px;
-            border: var(--card-border);
-            transition: all 0.3s ease;
-        }
-
-        .appointment-card:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-        }
-
-        .appointment-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 15px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .appointment-service {
-            font-size: 1.2rem;
-            font-weight: 600;
-            color: var(--accent-color);
-        }
-
-        .appointment-date {
-            font-size: 0.9rem;
-            color: var(--text-dark);
-        }
-
-        .appointment-details {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 15px;
-        }
-
-        .detail-group {
-            margin-bottom: 10px;
-        }
-
-        .detail-label {
-            font-size: 0.8rem;
-            color: var(--text-dark);
-            margin-bottom: 3px;
-        }
-
-        .detail-value {
-            font-size: 1rem;
-        }
-
-        .no-appointments {
-            text-align: center;
-            padding: 50px 0;
-            color: var(--text-dark);
-        }
-
-        .no-appointments i {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            color: var(--accent-color);
+        .btn i {
+            margin-right: 5px;
         }
 
         .search-container {
@@ -180,24 +100,98 @@
 
         .search-input {
             width: 100%;
-            padding: 10px 15px;
+            padding: 12px;
+            background-color: rgba(0, 0, 0, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: var(--border-radius);
-            border: var(--card-border);
-            background-color: rgba(30, 30, 30, 0.7);
             color: var(--text-color);
             font-size: 1rem;
-            transition: all 0.3s ease;
         }
 
-        .search-input:focus {
-            outline: none;
-            border-color: var(--accent-color);
-            box-shadow: 0 0 10px rgba(147, 112, 219, 0.3);
+        .appointments-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+
+        .appointment-card {
+            background-color: var(--card-bg);
+            border-radius: var(--border-radius);
+            border: var(--card-border);
+            box-shadow: var(--card-shadow);
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .appointment-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.7);
+        }
+
+        .appointment-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+            background-color: rgba(0, 0, 0, 0.3);
+        }
+
+        .appointment-service {
+            font-weight: 600;
+            color: var(--accent-color);
+        }
+
+        .appointment-date {
+            font-size: 0.8rem;
+            color: var(--text-dark);
+        }
+
+        .appointment-details {
+            padding: 15px;
+        }
+
+        .detail-group {
+            margin-bottom: 10px;
+            display: flex;
+        }
+
+        .detail-label {
+            font-weight: 500;
+            width: 100px;
+            color: var(--text-dark);
+        }
+
+        .detail-value {
+            flex: 1;
+        }
+
+        .no-appointments {
+            grid-column: 1 / -1;
+            text-align: center;
+            padding: 50px 20px;
+            background-color: var(--card-bg);
+            border-radius: var(--border-radius);
+            border: var(--card-border);
+            box-shadow: var(--card-shadow);
+        }
+
+        .no-appointments i {
+            font-size: 3rem;
+            color: var(--text-dark);
+            margin-bottom: 20px;
+        }
+
+        .no-appointments h3 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
         }
 
         .footer {
-            margin-top: 30px;
             text-align: center;
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
             color: var(--text-dark);
             font-size: 0.9rem;
         }
@@ -207,10 +201,6 @@
             text-decoration: none;
         }
 
-        .footer a:hover {
-            text-decoration: underline;
-        }
-
         @media (max-width: 768px) {
             .admin-header {
                 flex-direction: column;
@@ -218,18 +208,7 @@
                 gap: 15px;
             }
 
-            .admin-actions {
-                width: 100%;
-                justify-content: flex-start;
-            }
-
-            .appointment-header {
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 10px;
-            }
-
-            .appointment-details {
+            .appointments-container {
                 grid-template-columns: 1fr;
             }
         }
@@ -517,4 +496,4 @@
         }
     </script>
 </body>
-</html> 
+</html>
